--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -36,5 +36,6 @@
         "selectedIconPath": "assets/images/icon_info_active.png"
       }
     ]
-  }
+  },
+  "sitemapLocation": "sitemap.json"
 }
