--- a/project.config.json
+++ b/project.config.json
@@ -13,6 +13,8 @@
 	"appid": "wx18b8360febfb0daa",
 	"projectname": "heshui",
 	"libVersion": "2.2.5",
+	"simulatorType": "wechat",
+	"simulatorPluginLibVersion": {},
 	"condition": {
 		"search": {
 			"current": -1,
